# hackathon_jupyter_persona

./: .gitignore  CLAUDE.md  README.md  environment_packages.txt  hackathon_persona.tar  pyproject.toml
hackathon_jupyter_persona/: .gitignore
hackathon_jupyter_persona/.ipynb_checkpoints/: pyproject-checkpoint.toml
src/goodbot/: __init__.py  agent.py  chat_models.py  config.py  persona.py  prompt_template.py
src/goodbot/stores/: vector_store.py
src/goodbot/tools/: __init__.py  doc_search.py  notebook.py  web_search.py
src/goodbot_gpt5/: __init__.py  chat_models.py  config.py  persona.py
src/goodbot_gpt5/stores/: vector_store.py
src/goodbot_gpt5/tools/: __init__.py  notebook.py
