[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hackathon-jupyter-persona"
version = "0.1.0"
description = "GoodBot - A Jupyter AI persona for clinical data extraction hackathon"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.0",
    "pydantic-settings>=2.0",
]

[project.entry-points."jupyter_ai.personas"]
goodbot = "goodbot.persona:GoodBotPersona"

[tool.hatch.build.targets.wheel]
packages = ["src/goodbot"]
