[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goodbot-gpt5"
version = "0.1.0"
description = "GoodBot-GPT5 - A Jupyter AI persona for clinical data extraction hackathon"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.0",
    "pydantic-settings>=2.0",
]

[project.entry-points."jupyter_ai.personas"]
goodbot-gpt5 = "goodbot_gpt5.persona:GoodBotPersona"

[tool.hatch.build.targets.wheel]
packages = ["src/goodbot_gpt5"]
